# ccard-lib

./: .gitignore  .travis.yml  Doxyfile  README.md  SConstruct  configure.in
ext/: SConscript  demo.php  php_ccard.i
include/: adaptive_counting.h  ccard_common.h  hyperloglog_counting.h  hyperloglogplus_counting.h  linear_counting.h  loglog_counting.h  lookup3hash.h  murmurhash.h  register_set.h  sparse_bitmap.h
src/: SConscript  adaptive_counting.c  hyperloglog_counting.c  hyperloglogplus_counting.c  linear_counting.c  loglog_counting.c  lookup3hash.c  murmurhash.c  register_set.c  sparse_bitmap.c
t/: Makefile  Makefile.sample  SConscript  SConstruct  adaptive_counting_unittest.c  adaptive_counting_unittest.cc  hyperloglog_counting_unittest.c  hyperloglog_counting_unittest.cc  hyperloglogplus_counting_unittest.cc  linear_counting_unittest.cc  loglog_counting_unittest.c  lookup3hash_unittest.c  lookup3hash_unittest.cc  murmurhash_unittest.c  murmurhash_unittest.cc  register_set_unittest.c  register_set_unittest.cc
util/: indent-src
